# IntelligentRoboticsLabs

./: README.md
es1 - Topics and Custom messages/: README.md
es1 - Topics and Custom messages/ros2_ws/src/vac_interfaces/: CMakeLists.txt  package.xml
es1 - Topics and Custom messages/ros2_ws/src/vac_interfaces/msg/: Status.msg
es1 - Topics and Custom messages/ros2_ws/src/vacuum/: CMakeLists.txt  package.xml
es1 - Topics and Custom messages/ros2_ws/src/vacuum/src/: charger.cpp  robot.cpp
es2 - Actions/: README.md
es2 - Actions/ros2_ws/src/vacuum_action_interfaces/: CMakeLists.txt  package.xml
es2 - Actions/ros2_ws/src/vacuum_action_interfaces/action/: Charging.action
es2 - Actions/ros2_ws/src/vacuum_charger/: CMakeLists.txt  package.xml
es2 - Actions/ros2_ws/src/vacuum_charger/src/: charger_client.cpp  vacuum_server.cpp
es3 - Bags and Transforms/: README.md
es3 - Bags and Transforms/ros2_ws/: out.csv  plot_paths.py
es3 - Bags and Transforms/ros2_ws/src/bag_listener/: CMakeLists.txt  package.xml
es3 - Bags and Transforms/ros2_ws/src/bag_listener/src/: bag_listener.cpp
es4 - Services/: README.md
es4 - Services/ros2_ws/src/group_24_ex4/: CMakeLists.txt  package.xml
es4 - Services/ros2_ws/src/group_24_ex4/launch/: ex4.launch.py
es4 - Services/ros2_ws/src/group_24_ex4/src/: burrow_client.cpp  turtlebot_server.cpp
es4 - Services/ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
es4 - Services/ros2_ws/src/interfaces/srv/: RefillBurrow.srv
es4 - Services/ros2_ws/src/ir_2526/ir_base/: CMakeLists.txt
es4 - Services/ros2_ws/src/ir_2526/ir_desription/: CMakeLists.txt
es4 - Services/ros2_ws/src/ir_2526/ir_launch/: CMakeLists.txt
es4 - Services/ros2_ws/src/ir_2526/ir_movit_config/: CMakeLists.txt
es4 - Services/ros2_ws/src/ir_2526/ir_movit_config/src/: short_joint_state_publisher.cpp
